mostly worked on the header to make them align properly in the desktop  and fixed the bg position of the feature setion

--- a/scss/_features_section.scss
+++ b/scss/_features_section.scss
@@ -17,9 +17,6 @@
 }
 
 @media(min-width: 1114px) {
-    .feature_section {
-        background-position: 50% 50%;
-    }
     .feature_wrapper {
         max-width: 1114px;
         margin: auto;
